<resources>
    <string name="app_name" translatable="false">PlacarApp</string>
    <string name="label_titulo">Teams</string>
    <string name="label_desenvolvido_por">Developed by Raul Cardoso</string>
    <string name="btnJogar">Play</string>
    <string name="edtTimeVisitante">Visitor</string>
    <string name="placarInicial" translatable="false">0</string>
    <string name="btnGol">Goal</string>
    <string name="edtTimeCasa">Home</string>
</resources>
